--- a/gitops/apps/home-assistant/automations/alex_reolink_pet_detect_snapshot.yaml
+++ b/gitops/apps/home-assistant/automations/alex_reolink_pet_detect_snapshot.yaml
@@ -40,3 +40,13 @@ actions:
   - action: input_text.set_value
     target: { entity_id: input_text.event_image_timestamp }
     data: { value: "{{ now().strftime('%Y-%m-%d %H:%M:%S') }}" }
+  - action: notify.mobile_app_pixel_9_pro_xl
+    data:
+      title: "Pet detected - {{ room }}"
+      message: "{{ now().strftime('%-I:%M %p on %b %-d') }}"
+      data:
+        image: "{{ url }}"
+        tag: "pet-{{ slug }}"
+        importance: low
+        sticky: true
+
