--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -254,7 +254,7 @@ data:
         data: { value: "{{ room }}" }
       - action: input_text.set_value
         target: { entity_id: input_text.event_image_timestamp }
-        data: { value: "{{ now().strftime('%Y-%m-%d %H:%M:%S') }}" }
+        data: { value: "{{ timestamp }}" }
       - action: notify.mobile_app_pixel_9_pro_xl
         data:
           title: "Pet detected - {{ room }}"
