--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -155,6 +155,7 @@ spec:
               automation ui: !include automations.yaml
               script: !include scripts.yaml
               scene: !include scenes.yaml
+              input_text: !include helpers.yaml
               
               # Shell commands for photo cleanup
               shell_command:
@@ -165,6 +166,21 @@ spec:
               echo "[]" > "${CONFIG_DIR}/scripts.yaml"
               echo "[]" > "${CONFIG_DIR}/scenes.yaml"
               echo "[]" > "${CONFIG_DIR}/automations.yaml"
+              
+              # Create helper entities configuration
+              cat > "${CONFIG_DIR}/helpers.yaml" << 'EOF'
+              # Helper entities for pet detection automation
+              input_text:
+                event_image_location:
+                  name: "Event Image Location"
+                  initial: "None"
+                  icon: mdi:map-marker
+                  
+                event_image_timestamp:
+                  name: "Event Image Timestamp" 
+                  initial: "None"
+                  icon: mdi:clock
+              EOF
               
               # Set proper permissions for www directories
               chmod 755 "${CONFIG_DIR}/www/pets"
