--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -252,7 +252,7 @@ data:
           filename: "{{ path }}"
       - action: input_text.set_value
         target: { entity_id: input_text.event_image_location_text }
-        data: { value: "{{ room }}" }
+        data: { value: "{{ slug }}" }
       - action: input_text.set_value
         target: { entity_id: input_text.event_image_timestamp_text }
         data: { value: "{{ timestamp }}" }
