--- a/gitops/apps/home-assistant/automations/alex_night_lighting_on_toggle.yaml
+++ b/gitops/apps/home-assistant/automations/alex_night_lighting_on_toggle.yaml
@@ -28,17 +28,21 @@ actions:
   - choose:
       - conditions: "{{ is_color_light }}"
         sequence:
+          - action: light.turn_off
+            target: { entity_id: "{{ trigger.entity_id }}" }
           - action: light.turn_on
             target: { entity_id: "{{ trigger.entity_id }}" }
             data:
               brightness_pct: 10
               rgb_color: [255, 0, 0]
-              transition: 1
+              transition: 0
       - conditions: "{{ not is_color_light }}"
         sequence:
+          - action: light.turn_off
+            target: { entity_id: "{{ trigger.entity_id }}" }
           - action: light.turn_on
             target: { entity_id: "{{ trigger.entity_id }}" }
             data:
               brightness_pct: 10
               color_temp_kelvin: 2000
-              transition: 1
+              transition: 0
