--- a/gitops/apps/home-assistant/automations/alex_night_lighting_on_toggle.yaml
+++ b/gitops/apps/home-assistant/automations/alex_night_lighting_on_toggle.yaml
@@ -10,6 +10,8 @@ triggers:
       - light.kitchen
     from: "off"
     to: "on"
+  - trigger: time
+    at: "06:00:00"
 variables:
   is_past_cutoff: >
     {% set wd = now().weekday() %}  {# Mon=0..Sun=6 #}
@@ -26,20 +28,26 @@ conditions:
     value_template: "{{ is_past_cutoff }}"
 actions:
   - choose:
-      - conditions: "{{ is_color_light }}"
+      - conditions: 
+          - condition: template
+            value_template: "{{ trigger.platform == 'time' }}"
         sequence:
-          - action: light.turn_off
-            target: { entity_id: "{{ trigger.entity_id }}" }
+          - action: scene.turn_on
+            target: { entity_id: "scene.bathroom_energize" }
+      - conditions: 
+          - condition: template
+            value_template: "{{ trigger.platform == 'state' and is_past_cutoff and is_color_light }}"
+        sequence:
           - action: light.turn_on
             target: { entity_id: "{{ trigger.entity_id }}" }
             data:
               brightness_pct: 10
               rgb_color: [255, 0, 0]
               transition: 0
-      - conditions: "{{ not is_color_light }}"
+      - conditions: 
+          - condition: template
+            value_template: "{{ trigger.platform == 'state' and is_past_cutoff and not is_color_light }}"
         sequence:
-          - action: light.turn_off
-            target: { entity_id: "{{ trigger.entity_id }}" }
           - action: light.turn_on
             target: { entity_id: "{{ trigger.entity_id }}" }
             data:
