--- a/gitops/apps/home-assistant/automations/alex_night_lighting_on_toggle.yaml
+++ b/gitops/apps/home-assistant/automations/alex_night_lighting_on_toggle.yaml
@@ -10,8 +10,6 @@ triggers:
       - light.kitchen
     from: "off"
     to: "on"
-  - trigger: time
-    at: "06:00:00"
 variables:
   is_past_cutoff: >
     {% set wd = now().weekday() %}  {# Mon=0..Sun=6 #}
@@ -28,24 +26,9 @@ variables:
     light.hallway: scene.hallway_nightlight
     light.kitchen: scene.kitchen_nightlight
   room_scene: "{{ room_scenes[trigger.entity_id] }}"
-  energize_scenes:
-    light.living_room: scene.living_room_energize
-    light.bathroom: scene.bathroom_energize
-    light.bedroom: scene.bedroom_energize
-    light.hallway: scene.hallway_energize
-    light.kitchen: scene.kitchen_energize
-  energize_scene: "{{ energize_scenes[trigger.entity_id] }}"
+conditions:
+  - condition: template
+    value_template: "{{ is_past_cutoff }}"
 actions:
-  - choose:
-      - conditions: 
-          - condition: template
-            value_template: "{{ trigger.platform == 'time' }}"
-        sequence:
-          - action: scene.turn_on
-            target: { entity_id: "{{ energize_scene }}" }
-      - conditions: 
-          - condition: template
-            value_template: "{{ trigger.platform == 'state' and is_past_cutoff }}"
-        sequence:
-          - action: scene.turn_on
-            target: { entity_id: "{{ room_scene }}" }
+  - action: scene.turn_on
+    target: { entity_id: "{{ room_scene }}" }
