--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -4,22 +4,6 @@ metadata:
   name: homeassistant-automations
   namespace: home-assistant
 data:
-  alex_6am_energize_scenes.yaml: |
-    alias: Alex - 6AM Energize Scenes
-    mode: single
-    triggers:
-      - trigger: time
-        at: "06:00:00"
-    actions:
-      - action: scene.turn_on
-        target: 
-          entity_id:
-            - scene.living_room_energize
-            - scene.bathroom_energize
-            - scene.bedroom_energize
-            - scene.hallway_energize
-            - scene.kitchen_energize
-
   alex_ac_auto_cool_away.yaml: |
     alias: Alex - AC Auto Cool (Away)
     mode: restart
@@ -138,17 +122,13 @@ data:
 
   alex_night_lighting_on_toggle.yaml: |
     alias: Alex - Night Lighting on Toggle
-    mode: parallel
+    mode: single
     triggers:
-      - trigger: state
-        entity_id:
-          - light.living_room
-          - light.bathroom
-          - light.bedroom
-          - light.hallway
-          - light.kitchen
-        from: "off"
-        to: "on"
+      - trigger: event
+        event_type: hue_event
+        event_data:
+          device_id: living_room_switch
+          button: 1
     variables:
       is_past_cutoff: >
         {% set wd = now().weekday() %}  {# Mon=0..Sun=6 #}
@@ -158,19 +138,13 @@ data:
         {% else %}
           {{ current_hour >= 23 or current_hour < 6 }}
         {% endif %}
-      room_scenes:
-        light.living_room: scene.living_room_nightlight
-        light.bathroom: scene.bathroom_nightlight
-        light.bedroom: scene.bedroom_nightlight
-        light.hallway: scene.hallway_nightlight
-        light.kitchen: scene.kitchen_nightlight
-      room_scene: "{{ room_scenes[trigger.entity_id] }}"
+        {{ true }}
     conditions:
       - condition: template
         value_template: "{{ is_past_cutoff }}"
     actions:
       - action: scene.turn_on
-        target: { entity_id: "{{ room_scene }}" }
+        target: { entity_id: "scene.bedroom_nightlight" }
 
   alex_reolink_human_detect_alert.yaml: |
     alias: Alex - Reolink Human Alert (Away)
