--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -120,31 +120,30 @@ data:
       - service: shell_command.cleanup_old_photos
         data: {}
 
+  alex_living_room_night_lighting.yaml: |
+    alias: Alex - Living Room Night Lighting
+    description: "Applies red night lighting to living room when lights turn on or switch is pressed during night hours"
+    use_blueprint:
+      path: hue_living_room_defaults_blueprint.yaml
+      input:
+        living_room_lights:
+          - light.living_room
+        living_room_switch_events:
+          - event.living_room_switch_button_1
+        only_when_manual: true
+        settle_seconds: 0
+        event_states:
+          - initial_press
+          - short_release
+        brightness: 26  # Very dim for night lighting
+        color_mode: hs
+        hs_hue: 0  # Red
+        hs_sat: 100  # Full saturation for deep red
+        transition_secs: 0.2
+
   alex_night_lighting_on_toggle.yaml: |
-    alias: Alex - Night Lighting on Toggle
-    mode: single
-    triggers:
-      - trigger: event
-        event_type: hue_event
-        event_data:
-          device_id: living_room_switch
-          button: 1
-    variables:
-      is_past_cutoff: >
-        {% set wd = now().weekday() %}  {# Mon=0..Sun=6 #}
-        {% set current_hour = now().hour %}
-        {% if wd in [4,5] %}
-          {{ current_hour >= 1 or current_hour < 6 }}
-        {% else %}
-          {{ current_hour >= 23 or current_hour < 6 }}
-        {% endif %}
-        {{ true }}
-    conditions:
-      - condition: template
-        value_template: "{{ is_past_cutoff }}"
-    actions:
-      - action: scene.turn_on
-        target: { entity_id: "scene.bedroom_nightlight" }
+    # This automation has been replaced by alex_living_room_night_lighting.yaml
+    # which uses the hue_living_room_defaults_blueprint.yaml blueprint
 
   alex_reolink_human_detect_alert.yaml: |
     alias: Alex - Reolink Human Alert (Away)
@@ -245,4 +244,204 @@ data:
             tag: "pet-{{ slug }}"
             importance: low
             sticky: true
+
+  hue_living_room_defaults_blueprint.yaml: |
+    blueprint:
+      name: Hue – Living Room defaults (light on or switch press)
+      description: >
+        Applies your default color/brightness to Living Room Hue lights when:
+        1) the light turns ON (manually via Hue), or
+        2) your Hue switch event entity fires (e.g., event.living_room_switch_button_1).
+        For state-based turn-ons, can ignore HA-initiated calls using context.user_id.
+      domain: automation
+      input:
+        living_room_lights:
+          name: Living Room lights
+          selector:
+            entity:
+              domain: light
+              multiple: true
+        living_room_switch_events:
+          name: Living Room Hue switch event entities
+          description: e.g. event.living_room_switch_button_1
+          selector:
+            entity:
+              domain: event
+              multiple: true
+        only_when_manual:
+          name: Only when manual (for light-on trigger)
+          description: Skip when HA turned the light on (uses context.user_id is none)
+          default: true
+          selector:
+            boolean: {}
+        settle_seconds:
+          name: Settle seconds (for light-on trigger)
+          default: 1
+          selector:
+            number:
+              min: 0
+              max: 5
+              step: 1
+              unit_of_measurement: s
+        event_states:
+          name: Switch event states to react to
+          description: Common: initial_press, short_release (leave as-is if unsure)
+          default:
+            - initial_press
+            - short_release
+          selector:
+            select:
+              multiple: true
+              options:
+                - initial_press
+                - short_release
+                - repeat
+                - long_release
+        brightness:
+          name: Brightness (0–255)
+          default: 180
+          selector:
+            number:
+              min: 1
+              max: 255
+              step: 1
+        color_mode:
+          name: Color mode
+          default: color_temp
+          selector:
+            select:
+              options:
+                - color_temp
+                - hs
+        color_temp_mireds:
+          name: Color Temp (mireds)
+          default: 350
+          selector:
+            number:
+              min: 153
+              max: 500
+              step: 1
+        hs_hue:
+          name: HS – Hue (0–360)
+          default: 30
+          selector:
+            number:
+              min: 0
+              max: 360
+              step: 1
+        hs_sat:
+          name: HS – Saturation (0–100)
+          default: 30
+          selector:
+            number:
+              min: 0
+              max: 100
+              step: 1
+        transition_secs:
+          name: Transition (seconds)
+          default: 0.4
+          selector:
+            number:
+              min: 0
+              max: 5
+              step: 0.1
+    
+    mode: restart
+    max_exceeded: silent
+    
+    variables:
+      only_when_manual: !input only_when_manual
+      event_states: !input event_states
+      color_mode: !input color_mode
+      brightness: !input brightness
+      color_temp_mireds: !input color_temp_mireds
+      hs_hue: !input hs_hue
+      hs_sat: !input hs_sat
+      transition_secs: !input transition_secs
+    
+    trigger:
+      - id: light_on
+        platform: state
+        entity_id: !input living_room_lights
+        to: "on"
+        for:
+          seconds: !input settle_seconds
+    
+      - id: switch_event
+        platform: state
+        entity_id: !input living_room_switch_events
+    
+    condition: []
+    
+    action:
+      - choose:
+          # Branch A: Light turned ON (typically via Hue/manual)
+          - conditions:
+              - condition: template
+                value_template: "{{ trigger.id == 'light_on' }}"
+              - condition: template
+                alias: "If only_when_manual, require external (non-HA) turn-on"
+                value_template: >
+                  {% if not only_when_manual %} true
+                  {% else %} {{ trigger.to_state.context.user_id is none }}
+                  {% endif %}
+            sequence:
+              - choose:
+                  - conditions:
+                      - condition: template
+                        value_template: "{{ color_mode == 'color_temp' }}"
+                    sequence:
+                      - service: light.turn_on
+                        target:
+                          entity_id: !input living_room_lights
+                        data:
+                          brightness: "{{ brightness | int }}"
+                          color_temp: "{{ color_temp_mireds | int }}"
+                          transition: "{{ transition_secs | float }}"
+                  - conditions:
+                      - condition: template
+                        value_template: "{{ color_mode == 'hs' }}"
+                    sequence:
+                      - service: light.turn_on
+                        target:
+                          entity_id: !input living_room_lights
+                        data:
+                          brightness: "{{ brightness | int }}"
+                          hs_color: ["{{ hs_hue | float }}", "{{ hs_sat | float }}"]
+                          transition: "{{ transition_secs | float }}"
+    
+          # Branch B: Hue switch event entity fired
+          - conditions:
+              - condition: template
+                value_template: "{{ trigger.id == 'switch_event' }}"
+              - condition: template
+                alias: "Only react to desired event states"
+                value_template: >
+                  {{ trigger.to_state is not none and
+                     trigger.to_state.state in event_states }}
+            sequence:
+              - delay: "00:00:00.2"  # let Hue apply its ON, then override cleanly
+              - choose:
+                  - conditions:
+                      - condition: template
+                        value_template: "{{ color_mode == 'color_temp' }}"
+                    sequence:
+                      - service: light.turn_on
+                        target:
+                          entity_id: !input living_room_lights
+                        data:
+                          brightness: "{{ brightness | int }}"
+                          color_temp: "{{ color_temp_mireds | int }}"
+                          transition: "{{ transition_secs | float }}"
+                  - conditions:
+                      - condition: template
+                        value_template: "{{ color_mode == 'hs' }}"
+                    sequence:
+                      - service: light.turn_on
+                        target:
+                          entity_id: !input living_room_lights
+                        data:
+                          brightness: "{{ brightness | int }}"
+                          hs_color: ["{{ hs_hue | float }}", "{{ hs_sat | float }}"]
+                          transition: "{{ transition_secs | float }}"
 
