--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -245,9 +245,9 @@ data:
             importance: low
             sticky: true
 
-  blueprints/automation/homeassistant/hue_living_room_defaults_blueprint.yaml: |
+  blueprints_automation_homeassistant_hue_living_room_defaults_blueprint.yaml: |
     blueprint:
-      name: Hue – Living Room defaults (light on or switch press)
+      name: Hue - lving Room defaults (light on or switch press)
       description: >
         Applies your default color/brightness to Living Room Hue lights when:
         1) the light turns ON (manually via Hue), or
