Add reloader annotations to Home Assistant ConfigMaps
- Add reloader.stakater.com/auto: 'true' annotation to homeassistant-automations ConfigMap
- Add reloader.stakater.com/auto: 'true' annotation to ha-blueprints-defaults ConfigMap
- This enables automatic pod restarts when these ConfigMaps change

--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -3,6 +3,8 @@ kind: ConfigMap
 metadata:
   name: ha-blueprints-defaults
   namespace: home-assistant
+  annotations:
+    reloader.stakater.com/auto: "true"
 data:
   hue_living_room_defaults.yaml: |
     blueprint:
