--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -3,6 +3,8 @@ kind: ConfigMap
 metadata:
   name: homeassistant-automations
   namespace: home-assistant
+  annotations:
+    reloader.stakater.com/auto: "true"
 data:
   alex_ac_auto_cool_away.yaml: |
     alias: Alex - AC Auto Cool (Away)
