--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -8,7 +8,7 @@ metadata:
 data:
   hue_living_room_defaults.yaml: |
     blueprint:
-      name: Hue - lving Room defaults (light on or switch press)
+      name: Hue - Living Room defaults (light on or switch press)
       description: >
         Applies your default color/brightness to Living Room Hue lights when:
         1) the light turns ON (manually via Hue), or
