Configure reloader to watch all namespaces
- Set watchGlobally: true to enable cross-namespace monitoring
- This allows reloader to detect changes in home-assistant namespace ConfigMaps

--- a/gitops/infra/reloader/values.yaml
+++ b/gitops/infra/reloader/values.yaml
@@ -66,8 +66,8 @@ affinity: {}
 
 # Reloader specific configuration
 reloader:
-  # Watch on default namespace
-  watchGlobally: false
+  # Watch on all namespaces
+  watchGlobally: true
   
   # Log level
   logLevel: info
