--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_living_room_defaults.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_living_room_defaults.yaml
@@ -37,7 +37,7 @@ blueprint:
           unit_of_measurement: s
     event_states:
       name: Switch event states to react to
-      description: Common: initial_press, short_release (leave as-is if unsure)
+      description: "Common: initial_press, short_release (leave as-is if unsure)"
       default:
         - initial_press
         - short_release
